--- a/bower.json
+++ b/bower.json
@@ -1,11 +1,11 @@
 {
-  "name": "jquery-equalheights",
+  "name": "jquery.matchheights",
   "version": "0.0.1",
   "authors": [
     "OiNutter <willmckenzie@oinutter.co.uk>"
   ],
   "description": "jQuery plugin to equalize heights across DOM elements",
-  "main": "jquery.equalheights.js",
+  "main": "jquery.matchheights.js",
   "keywords": [
     "jquery",
     "dom",
@@ -13,7 +13,7 @@
     "height"
   ],
   "license": "MIT",
-  "homepage": "https://github.com/KomodoHQ/jquery.equalheights",
+  "homepage": "https://github.com/KomodoHQ/jquery.matchheights",
   "ignore": [
     "**/.*",
     "node_modules",
